<resources>
    <string name="app_name">MAD ToDo</string>
    <string name="detailview_description_label">Beschreibung</string>
    <string name="detailview_name_label">Titel</string>
    <string name="checked">erledigt</string>
    <string name="favourite">wichtig</string>
    <string name="setExpiryDate">Fälligkeitsdatum auswählen</string>
    <string name="setExpiryTime">Uhrzeit</string>
    <string name="datum">Datum: </string>
    <string name="labelFavourite">Wichtig</string>
    <string name="labelChecked">Erledigt</string>
    <string name="labelExpiry">Fälligkeitsdatum:</string>
    <string name="labelChangeExpiry">Click to Change</string>
    <string name="labelLogin">Anmelden</string>
    <string name="hintPasswort">Passwort eingeben</string>
    <string name="hintEmail">E-Mail eingeben</string>
    <string name="labelLoginError">Falsche Anmeldedaten</string>
    <string name="labelDeleteLocal">Clear local items</string>
    <string name="labelDeleteRemote">Clear remote items</string>
    <string name="labelSortFavorite">Sort for favourites</string>
    <string name="labelSortDate">Sort for dates</string>
    <string name="labelAddContact">ADD CONTACT</string>
    <string name="labelDeleteAll">Delete ALL</string>
    <string name="labelDoSync">Sync</string>
    <string name="labelKontakte">Kontakte</string>
    <string name="labelLoginEmailError">Bitte E-Mail-Adresse eingeben</string>
</resources>
